--- a/index.html
+++ b/index.html
@@ -10,24 +10,296 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
     />
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/estilos.css" />
     <title>HZC | HOME</title>
   </head>
   <body>
     <header class="cabecalho">
-        <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
-        <img class="cabecalho__logo" src="assets/img/logo.svg" alt="Logo HZC">
-        <button class="cabecalho__notificacao" aria-label="Notificação"><i></i></button>
+      <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
+      <img class="cabecalho__logo" src="assets/img/logo.svg" alt="Logo HZC" />
+      <p class="cabecalho__perfil">Bruno Lopes</p>
+      <button class="cabecalho__notificacao" aria-label="Notificação">
+        <i></i>
+      </button>
     </header>
     <nav class="menu-lateral">
-        <img class="menu-lateral__logo" src="assets/img/logo.svg" alt="Logo">
-        <a href="#" class="menu-lateral__link menu-lateral__link--inicio" >Início</a>
-        <a href="#" class="menu-lateral__link menu-lateral__link--videos" >Vídeos</a>
-        <a href="#" class="menu-lateral__link menu-lateral__link--picos" >Picos</a>
-        <a href="#" class="menu-lateral__link menu-lateral__link--integrantes" >Integrantes</a>
-        <a href="#" class="menu-lateral__link menu-lateral__link--camisas" >Camisas</a>
-        <a href="#" class="menu-lateral__link menu-lateral__link--pinturas" >Pinturas</a>
+      <img class="menu-lateral__logo" src="assets/img/logo.svg" alt="Logo" />
+      <a href="#" class="menu-lateral__link menu-lateral__link--inicio"
+        >Início</a
+      >
+      <a href="#" class="menu-lateral__link menu-lateral__link--videos"
+        >Vídeos</a
+      >
+      <a href="#" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
+      <a href="#" class="menu-lateral__link menu-lateral__link--integrantes"
+        >Integrantes</a
+      >
+      <a href="#" class="menu-lateral__link menu-lateral__link--camisas"
+        >Camisas</a
+      >
+      <a href="#" class="menu-lateral__link menu-lateral__link--pinturas"
+        >Pinturas</a
+      >
     </nav>
+
+    <main class="principal">
+      <h2 class="titulo-pagina">titulo</h2>
+      <article class="cartao cartao--destaque destaque-video">
+          <img
+            src="assets/img/banner-mobile_1.png"
+            alt="Banner cartão"
+            class="cartao__imagem cartao__imagem--mobile"
+          />
+        <img
+          src="assets/img/banner_1.png"
+          alt="Banner cartão"
+          class="cartao__imagem cartao__imagem--desktop"
+        />
+        <div class="cartao__conteudo">
+          <p class="cartao__destaque">Vídeo em destaque</p>
+          <h3 class="cartao__titulo">HZC - Título</h3>
+          <p class="cartao__perfil">Bruno Lopes</p>
+          <p class="cartao__info cartao__info--tempo">33 minutos</p>
+          <p class="cartao__info cartao__info--visualizacao">
+            40 visualizações
+          </p>
+          <button
+            class="cartao__botao cartao__botao--play cartao__botao--destaque"
+          >
+            Assistir agora
+          </button>
+        </div>
+      </article>
+
+      <article class="cartao cartao--recentes videos-recentes">
+        <h3 class="cartao__titulo">Vídeos recentes</h3>
+        <a href="#" class="cartao__link">Ver todos</a>
+        <ul class="cartao__lista">
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+        </ul>
+      </article>
+
+      <section class="secao secao-videos">
+        <h3 class="titulo-secao">Vídeos mais vistos</h3>
+        <article class="cartao cartao--destaque">
+          <img
+            src="assets/img/video_2.png"
+            alt="Vídeo"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
+          </div>
+        </article>
+        <article class="cartao cartao--destaque">
+          <img
+            src="assets/img/video_1.png"
+            alt="Vídeo"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
+          </div>
+        </article>
+        <article class="cartao cartao--destaque">
+          <img
+            src="assets/img/video_4.png"
+            alt="Vídeo"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
+          </div>
+        </article>
+        <article class="cartao cartao--destaque">
+          <img
+            src="assets/img/video_3.png"
+            alt="Vídeo"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
+          </div>
+        </article>
+      </section>
+
+      <article class="cartao cartao--recentes produtos-recentes">
+        <h3 class="cartao__titulo">Vídeos recentes</h3>
+        <a href="#" class="cartao__link">Ver todos</a>
+        <ul class="cartao__lista">
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+        </ul>
+      </article>
+
+      <article class="cartao cartao--destaque destaque-produtos">
+        <img
+          src="assets/img/banner-mobile_2.png"
+          alt="Banner cartão"
+          class="cartao__imagem cartao__imagem--mobile"
+        />
+        <img
+          src="assets/img/banner_2.png"
+          alt="Banner cartão"
+          class="cartao__imagem cartao__imagem--desktop"
+        />
+        <div class="cartao__conteudo">
+          <p class="cartao__destaque">Vídeo em destaque</p>
+          <h3 class="cartao__titulo">HZC - Título</h3>
+          <p class="cartao__perfil">Bruno Lopes</p>
+          <p class="cartao__info cartao__info--tempo">33 minutos</p>
+          <p class="cartao__info cartao__info--visualizacao">
+            40 visualizações
+          </p>
+          <button
+            class="cartao__botao cartao__botao--play cartao__botao--destaque"
+          >
+            Assistir agora
+          </button>
+        </div>
+      </article>
+
+      <section class="secao secao-produtos">
+        <h3 class="titulo-secao">Vídeos mais vistos</h3>
+        <article class="cartao cartao--destaque">
+          <img
+            src="assets/img/video_1.png"
+            alt="Vídeo"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
+          </div>
+        </article>
+        <article class="cartao cartao--destaque">
+          <img
+            src="assets/img/video_4.png"
+            alt="Vídeo"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
+          </div>
+        </article>
+        <article class="cartao cartao--destaque">
+          <img
+            src="assets/img/video_3.png"
+            alt="Vídeo"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
+          </div>
+        </article>
+        <article class="cartao cartao--destaque">
+          <img
+            src="assets/img/video_2.png"
+            alt="Vídeo"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
+          </div>
+        </article>
+      </section>
+    </main>
+
+    <script src="./index.js"></script>
   </body>
 </html>
